--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,12 @@ link:focus {
 }
 
 .attribution {
-  display: none;
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
   font-size: 11px;
   text-align: center;
 }
